# Radium-Engine

./: AdjacencyListOperation_8cpp.html  AdjacencyListOperation_8cpp.js  AdjacencyListOperation_8cpp__incl.map  AdjacencyListOperation_8cpp__incl.md5  AdjacencyListOperation_8hpp.html  AdjacencyListOperation_8hpp.js  AdjacencyListOperation_8hpp__dep__incl.map  AdjacencyListOperation_8hpp__dep__incl.md5  AdjacencyListOperation_8hpp__incl.map  AdjacencyListOperation_8hpp__incl.md5  AdjacencyListOperation_8hpp_source.html  AdjacencyList_8cpp.html  AdjacencyList_8cpp__incl.map  AdjacencyList_8cpp__incl.md5  AdjacencyList_8hpp.html  AdjacencyList_8hpp.js  AdjacencyList_8hpp__dep__incl.map  AdjacencyList_8hpp__dep__incl.md5  AdjacencyList_8hpp__incl.map  AdjacencyList_8hpp__incl.md5  AdjacencyList_8hpp_source.html  AdjacencyList_8inl.html  AdjacencyList_8inl__dep__incl.map  AdjacencyList_8inl__dep__incl.md5  AdjacencyList_8inl__incl.map  AdjacencyList_8inl__incl.md5  Adjacency_8cpp.html  Adjacency_8cpp.js  Adjacency_8cpp__incl.map  Adjacency_8cpp__incl.md5  Adjacency_8hpp.html  Adjacency_8hpp.js  Adjacency_8hpp__dep__incl.map  Adjacency_8hpp__dep__incl.md5  Adjacency_8hpp__incl.map  Adjacency_8hpp__incl.md5  Adjacency_8hpp_source.html  Algorithm_8hpp.html  Algorithm_8hpp__incl.map  Algorithm_8hpp__incl.md5  (+5878 more)
Applications/HelloRadium/: CMakeLists.txt  main.cpp  minimalapp.cpp
Applications/MainApplication/: CMakeLists.txt  MainApplication.cpp  main.cpp
Applications/MainApplication/Gui/: MainWindow.cpp  MainWindow.hpp
Applications/SimpleSubdivideExample/: CMakeLists.txt  main.cpp
Configs/: alternative.xml  default.xml
Plugins/: CMakeLists.txt
Plugins/Animation/: CMakeLists.txt
Plugins/Animation/src/: AnimationComponent.cpp  AnimationComponent.hpp  AnimationPlugin.cpp  AnimationPlugin.hpp  AnimationSystem.cpp  AnimationSystem.hpp
Plugins/Animation/src/Drawing/: SkeletonBoneDrawable.cpp
Plugins/Animation/src/UI/: AnimationUI.cpp  AnimationUI.h  AnimationUI.ui
Plugins/FancyMesh/: CMakeLists.txt
Plugins/FancyMesh/src/: FancyMeshComponent.cpp  FancyMeshComponent.hpp
Plugins/MeshFeatureTracking/: CMakeLists.txt
Plugins/MeshFeatureTracking/src/: MeshFeatureTrackingComponent.cpp  MeshFeatureTrackingPlugin.cpp
Plugins/MeshPaint/: CMakeLists.txt
Plugins/MeshPaint/src/: MeshPaintComponent.cpp
Plugins/Skinning/: CMakeLists.txt
Plugins/Skinning/src/: SkinningComponent.cpp  SkinningComponent.hpp  SkinningPlugin.cpp  SkinningPlugin.hpp
Shaders/: DrawScreenI.frag.glsl  LightingFunctions.glsl  LinesAdjacency.geom.glsl  Picking.frag.glsl  PickingLines.geom.glsl  PickingTriangles.geom.glsl
cmake/: CompileFlags.cmake  RadiumConfig.cmake.in  RadiumLibs.cmake  RadiumPluginConfig.cmake.in  SubModules.cmake  submoduleAssimp.cmake  submoduleEigen3.cmake  submoduleGLM.cmake  submoduleGlBinding.cmake  submoduleGlObjects.cmake  submoduleOpenMesh.cmake  submoduleSTB.cmake  submoduleTinyPly.cmake
scripts/: clang-format
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+152 more)
src/: CMakeLists.txt
src/Core/Algorithm/Diffusion/: Diffusion.cpp
src/Core/Algorithm/Subdivision/: CatmullClarkSubdivider.cpp  CatmullClarkSubdivider.hpp  CatmullClarkSubdivision.cpp  LoopSubdivider.cpp  LoopSubdivider.hpp  SubdividerUtils.hpp
src/Core/Animation/: Animation.cpp  Animation.hpp
src/Core/Animation/Handle/: HandleWeight.hpp  HandleWeightOperation.cpp  HandleWeightOperation.hpp
src/Core/Animation/Skinning/: BulgeCorrection.cpp  DualQuaternionSkinning.cpp  LinearBlendSkinning.cpp  LinearBlendSkinning.hpp
src/Core/File/: FileUtils.cpp  LightData.hpp
src/Core/Geometry/Mapping/: MappingOperation.cpp
src/Core/Geometry/Normal/: Normal.cpp
src/Core/Geometry/Partition/: Partition.cpp
src/Core/Geometry/PointCloud/: PointCloud.inl
src/Core/Math/: ColorPresets.hpp  ColorPresets_BACKUP_4872.hpp  ColorPresets_LOCAL_2656.hpp  Curve2D.inl  GlmAdapters.hpp  Math.hpp  PolyLine.cpp
src/Core/Mesh/: HalfEdge.cpp  MeshPrimitives.cpp  MeshPrimitives.inl  MeshUtils.cpp  MeshUtils.hpp  TriangleMesh.hpp
src/Core/Mesh/TopologicalTriMesh/: TopologicalMesh.cpp  TopologicalMesh.hpp
src/Core/Mesh/TopologicalTriMesh/Operations/: EdgeSplit.cpp
src/Core/Mesh/Wrapper/: TopologicalMeshConvert.cpp
src/Core/TreeStructures/: trianglekdtree.hpp
src/Core/Utils/: Attribs.hpp
src/Engine/: EXE_PATH.cpp  EXE_PATH.hpp  RadiumEngine.cpp
src/Engine/Assets/: AssimpGeometryDataLoader.cpp  GeometryData.cpp  GeometryData.hpp  GeometryData.inl
src/Engine/Component/: Component.cpp  Component.hpp
src/Engine/ItemModel/: ItemEntry.cpp  ItemEntry.hpp
src/Engine/Managers/SystemDisplay/: SystemDisplay.hpp
src/Engine/Renderer/: Renderer.cpp  Renderer.hpp
src/Engine/Renderer/Camera/: Camera.cpp  Camera.hpp  Camera.inl
src/Engine/Renderer/Mesh/: Mesh.cpp  Mesh.hpp  Mesh.inl
src/Engine/Renderer/RenderObject/: RenderObjectManager.cpp
src/Engine/Renderer/RenderTechnique/: RenderParameters.cpp  RenderParameters.hpp  ShaderConfiguration.cpp  ShaderProgramManager.cpp
src/Engine/Renderer/Renderers/: ForwardRenderer.cpp
src/Engine/System/: CouplingSystem.hpp  System.hpp
src/GuiBase/Utils/: KeyMappingManager.cpp
src/GuiBase/Viewer/: CameraInterface.cpp  CameraInterface.hpp  TrackballCamera.cpp  Viewer.cpp  Viewer.hpp
src/GuiBase/Viewer/Gizmo/: GizmoManager.cpp
src/IO/AssimpLoader/: AssimpGeometryDataLoader.cpp  CMakeLists.txt
src/IO/TinyPlyLoader/: CMakeLists.txt
src/PluginBase/: RadiumPluginInterface.hpp
src/Tests/CoreTests/: CMakeLists.txt
src/Tests/CoreTests/src/: Mesh.hpp
